--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
@@ -21,7 +21,7 @@
           <a href=""id="a1">Sports</a>
           <a href=""id="a1">Shows</a>
           <a href=""id="a1">Movies</a>
-          <a href=""id="a1">Kid</a>
+          <a href=""id="a1">Kids</a>
           <a href=""id="a1">Channels</a>
           <!-- <img src="url(search.svg);" alt=""> -->
           <!-- <button class="btn_search"> <i class="fa 
@@ -29,10 +29,12 @@
             <a href=""><img src="https://www.voot.com/images/icon_search_white.svg" alt=""
               height="30px"
               ></a>
+              <a href=""><img src="https://image.shutterstock.com/image-vector/vector-profile-icon-260nw-383407864.jpg" alt="" 
+               height="30px"></a>
               <!-- <i style="font-size:24px;color: white;" class="fa">&#xf007;</i> -->
               <!-- <i class="fa fa-user"></i>
               <i style="font-size:24px" class="fa">&#xf007;</i> -->
-              az
+           
 
         </div>
         
