--- a/3-CSS/306-CSS-Grid/CSS-306-03/index.html
+++ b/3-CSS/306-CSS-Grid/CSS-306-03/index.html
@@ -20,15 +20,15 @@
 
     </div>
     <div class="grid">
-        <div class="img1"><img src="https://st3.depositphotos.com/1005155/18681/i/450/depositphotos_186815414-stock-photo-stack-of-newspapers.jpg"  width="40px" alt=""></div>
-        <div class="img2"><img src="https://st3.depositphotos.com/1005979/19237/i/450/depositphotos_192376072-stock-photo-big-news-headlines-newspaper-announcement.jpg"  width="40px" alt=""></div>
-        <div class="img3"><img src="https://st.depositphotos.com/2288675/2450/i/450/depositphotos_24507499-stock-photo-daily-newspaper.jpg"  width="40px"  alt=""></div>
-        <div class="img4"><img src="https://static9.depositphotos.com/1152339/1159/i/450/depositphotos_11592027-stock-photo-newspaper.jpg"  width="40px"  alt=""></div>
-        <div class="img5"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713009-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
-        <div class="img6"><img src="https://st.depositphotos.com/1011349/1902/i/450/depositphotos_19021149-stock-photo-word-background.jpg" width="40px" alt=""></div>
-        <div class="img7"><img src="https://st4.depositphotos.com/13349494/19700/i/450/depositphotos_197002274-stock-photo-one-daily-newspaper-lying-white.jpg" width="40px" alt=""></div>
+        <div class="img1"><img src="https://t4.ftcdn.net/jpg/03/00/85/23/360_F_300852364_qSrtNxY6pokaVR7er7knpb8AyYJSxtUd.jpg"  width="40px" alt=""></div>
+        <div class="img2"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcScjp5iJ6qCuvw0kYTvGdyfiquPEHvaS5NMNw&usqp=CAU"  width="40px" alt=""></div>
+        <div class="img3"><img src="https://i.pinimg.com/originals/c0/ce/4c/c0ce4cd9dea35712bb5df60087e08bda.jpg"  width="40px"  alt=""></div>
+        <div class="img4"><img src="https://img.freepik.com/free-psd/newspaper-mockup-psd-wooden-table_53876-114511.jpg?w=2000"  width="40px"  alt=""></div>
+        <div class="img5"><img src="https://cdn.pixabay.com/photo/2016/02/01/00/56/news-1172463__340.jpg" width="40px" alt=""></div>
+        <div class="img6"><img src="https://www.shutterstock.com/image-photo/business-newspaper-on-wooden-background-260nw-381840133.jpg" width="40px" alt=""></div>
+        <div class="img7"><img src="https://img.freepik.com/free-psd/newspaper-mockup-psd-wooden-table_53876-114511.jpg?w=2000" width="40px" alt=""></div>
        
-        <div class="img8"><img src="https://st3.depositphotos.com/11433364/14371/i/450/depositphotos_143713001-stock-photo-coffee-cup-and-smartphone-on.jpg" width="40px" alt=""></div>
+        <div class="img8"><img src="https://www.shutterstock.com/image-photo/business-newspaper-on-wooden-background-260nw-381840133.jpg" width="40px" alt=""></div>
         <div class="img9"><img src="https://img.freepik.com/premium-vector/epidemic-breaking-news-mockup-coronavirus-newspaper-coronavirus-outbreak-newsletter-paper-page-mockup-daily-newspaper-news-related-covid-19_87561-473.jpg?w=740"width="40px" alt=""></div>
     </div>
     <div class="navbar-bottom">
