--- a/4-Advance-JS/410-Projects/AdvanceJS-410-04/index.html
+++ b/4-Advance-JS/410-Projects/AdvanceJS-410-04/index.html
@@ -82,10 +82,11 @@ var windspeed = document.querySelector(".windspeed");
 var temp = document.querySelector(".temp");
 var desc = document.querySelector(".desc");
 var apiKey = "1fdbf0a2f50cd3d40b9b0a5017429296";
-
+//var apiKey="7ffc67161766dba43beb7e03883f13db";
 function input (e){
 e.preventDefault();
 var word=document.getElementById('inputValue').value;
+
 // console.log(word);
 
 fetch(`https://api.openweathermap.org/data/2.5/weather?q=${word}&appid=${apiKey}`).then((response)=>response.json()).then((data)=>{
