--- a/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
+++ b/3-CSS/304-CSS-BOX-MODEL/CSS-304-04/index.html
@@ -29,11 +29,15 @@
             <a href=""><img src="https://www.voot.com/images/icon_search_white.svg" alt=""
               height="30px"
               ></a>
-              <a href=""><img src="https://image.shutterstock.com/image-vector/vector-profile-icon-260nw-383407864.jpg" alt="" 
+              <a href=""><img src="https://cdn-icons-png.flaticon.com/128/6681/6681204.png" alt="" 
                height="30px"></a>
-              <!-- <i style="font-size:24px;color: white;" class="fa">&#xf007;</i> -->
+               <!-- <a href=""><i style="font-size:24px;color: white;" class="fa">&#xf007;</i></a> -->
               <!-- <i class="fa fa-user"></i>
               <i style="font-size:24px" class="fa">&#xf007;</i> -->
+              <!-- <i class='far fa-user-circle'></i> -->
+              <!-- <i class='far fa-user-circle' style='font-size:24px'></i> -->
+
+
            
 
         </div>
