--- a/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-01/index.html
+++ b/4-Advance-JS/401-DOM-Manipulation/AdvanceJS-401-01/index.html
@@ -10,6 +10,7 @@
        margin-top: 20%;
        width: 200px;
        height: 30px;
+       border-color: aqua;
        
       }
     </style>
@@ -26,7 +27,7 @@
         text.innerHTML=value;
       }
       document.getElementById('input-field').addEventListener('input',input);
-      document.getElementById("input-field").style.borderColor = "skyblue";
+      //document.getElementById("input-field").style.borderColor = "skyblue";
     </script>
 </body>
 </html>
